# shmem

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  OAT.xml  OWNERS  README.md  SECURITY.md  Third_Party_Open_Source_Software_List.yaml  issues.md  requirements-examples.txt  setup.py  version.info
examples/: CMakeLists.txt
examples/aclgraph_demo/: CMakeLists.txt  README.md  aclgraph_demo_kernel.cpp  aclgraph_demo_kernel.h  add_custom.h  main.cpp  run.sh
examples/aclgraph_demo/scripts/: data_gen.py
examples/allgather/: CMakeLists.txt  README.md  allgather_kernel.cpp  allgather_kernel.h  main.cpp  run.sh
examples/allgather/scripts/: data_gen.py  data_statistic.py
examples/allgather_matmul/: CMakeLists.txt  README.md  main.cpp
examples/allgather_matmul/scripts/: run.sh
examples/allgather_matmul_padding/: CMakeLists.txt  README.md  main.cpp
examples/allgather_matmul_padding/scripts/: run.sh
examples/allgather_matmul_with_gather_result/: CMakeLists.txt  main.cpp
examples/allgather_matmul_with_gather_result/scripts/: run.sh
examples/cmo/: CMakeLists.txt  README.md  main.cpp  run.sh
examples/dispatch_gmm_combine/: CMakeLists.txt  main.cpp
examples/dispatch_gmm_combine/include/: block_epilogue_pertoken_row.h  block_epilogue_pertoken_swiglu.h  block_mmad_preload_async_fixpipe_quant.h  block_mmad_preload_fixpipe.h  copy_gm_to_l1_custom.h  copy_l0c_to_gm_custom.h  dispatch_gmm_combine.h  dispatch_policy_custom.h  moe_token_unpermute.h  moe_token_unpermute_tiling.h  select_helper.h  sync_util.h
examples/dispatch_gmm_combine/scripts/: run.sh
examples/dispatch_gmm_combine/utils/: check_result.py  gen_data.py
examples/dynamic_tiling/: CMakeLists.txt  README.md  main.cpp
examples/dynamic_tiling/impl/: CMakeLists.txt  kernel_bf16.cpp  kernel_fp16.cpp
examples/dynamic_tiling/include/: coc_tiling_lut.h  info.h  launch_map.h  tiling.h
examples/dynamic_tiling/scripts/: build.sh  run.sh
examples/dynamic_tiling/tiling/: allgather_tiling.cpp  allreduce_tiling.cpp  coc_tiling_lut.cpp  reducescatter_tiling.cpp
examples/dynamic_tiling/utils/: get_best_result.py  process_data.py
examples/hccs_sio_link/: CMakeLists.txt  README.md  hccs_sio_link_kernel.cpp  hccs_sio_link_kernel.h  main.cpp  run.sh
examples/hccs_sio_link/kernels/: hccs_sio_link_kernel.cpp  hccs_sio_link_kernel.h  hccs_sio_link_perf_kernel.cpp  hccs_sio_link_perf_kernel.h
examples/hccs_sio_link/utils/: hccs_sio_link_config.h  hccs_sio_link_perf_utils.h
examples/init/: CMakeLists.txt  README.md  main.cpp  run.sh
examples/kv_shuffle/: CMakeLists.txt  README.md  kv_shuffle_kernel.cpp  kv_shuffle_kernel.h  main.cpp
examples/kv_shuffle/scripts/: golden.py  result_compare.py  run.sh
examples/matmul_allreduce/: CMakeLists.txt  README.md  main.cpp
examples/matmul_allreduce/scripts/: gen_data.py  run.sh
examples/matmul_reduce_scatter/: CMakeLists.txt  README.md  main.cpp
examples/matmul_reduce_scatter/scripts/: run.sh
examples/matmul_reduce_scatter_padding/: CMakeLists.txt  README.md  main.cpp
examples/matmul_reduce_scatter_padding/scripts/: run.sh
examples/mte_perftest/: CMakeLists.txt  README.md  run.sh
examples/mte_perftest/ascendc_perftest/: CMakeLists.txt  README.md  ascendc_perftest_kernel.cpp  main.cpp
examples/mte_perftest/include/: mte_perftest_common.h
examples/mte_perftest/shmem_perftest/: CMakeLists.txt  README.md  main.cpp  run.sh  shmem_perftest_kernel.cpp
examples/multi_instance/: CMakeLists.txt  README.md  main.cpp  multi_instance_kernel.cpp  multi_instance_kernel.h  run.sh
examples/multi_instance/utils/: data_gen.py
examples/notifywait/: README.md  main.cpp  run.sh
examples/python_extension/: CMakeLists.txt  run.sh
examples/python_extension/src/: torch_bindings.cpp
examples/python_extension/test/: init_test.py  kv_shuffle.py  tls_test.py  unique_id_test.py
examples/python_extension/torch_test/: README.md
examples/rdma_aclgraph_demo/: CMakeLists.txt  README.md  main.cpp  rdma_aclgraph_demo_kernel.cpp  rdma_aclgraph_demo_kernel.h  run.sh
examples/rdma_demo/: CMakeLists.txt  README.md  main.cpp  rdma_demo_kernel.cpp  run.sh
examples/rdma_handlewait_test/unuse_handlewait/: CMakeLists.txt  README.md  main.cpp  run.sh  unuse_handlewait_kernel.cpp
examples/rdma_handlewait_test/use_handlewait/: CMakeLists.txt  (+4 more)
examples/rdma_perftest/: CMakeLists.txt  README.md  main.cpp  rdma_perftest_kernel.cpp  run.sh
examples/rdma_sync_barrier_demo/: CMakeLists.txt  README.md  main.cpp  rdma_sync_barrier_demo_kernel.cpp  rdma_sync_barrier_demo_kernel.h  run.sh
examples/rma_d2h_demo/: CMakeLists.txt  README.md  check_support.py  main.cpp  run.sh
examples/sdma/: CMakeLists.txt  README.md  main.cpp  run.sh
examples/sdma_d2h_demo/: CMakeLists.txt  README.md  main.cpp  run.sh
examples/shared_lib/: CMakeLists.txt
examples/shmem_perftest/: CMakeLists.txt  README.md  run.sh
examples/simt_rma/: README.md  run.sh
examples/simt_rma_perftest/: CMakeLists.txt  README.md  argparser.h  main.cpp  run.sh
examples/simt_rma_scalar/: README.md  run.sh
examples/udma_atomic_add/: README.md  run.sh
examples/udma_demo/: CMakeLists.txt  README.md  main.cpp  run.sh  udma_demo_kernel.cpp
examples/utils/: debug.h  gen_data.py  param.h  perf_data_process.py  perftest_common_types.h  utils.h  utils.py  verify_result.py
src/: CMakeLists.txt
src/device/: aclshmemi_def.h  aclshmemi_device_common.h  aclshmemi_device_common.hpp  aclshmemi_device_meta.h  shmemi_barrier.cpp  shmemi_def.h  shmemi_device_common.h  shmemi_device_common.hpp  shmemi_device_intf.h  shmemi_device_meta.h  shmemi_device_rma.h  shmemi_handle.cpp  shmemi_memset.cpp
src/device_simt/: shmemi_device_simt_common.hpp
src/host/: aclshmemi_host_common.h  aclshmemi_host_def.h  shmemi_host_common.h  shmemi_host_def.h
src/host_device/: shmemi_common_types.h.h  shmemi_host_device_constant.h
src/python/: setup.py
tests/fuzz/: CMakeLists.txt
tests/unittest/: CMakeLists.txt  unittest_main_test.h
tools/rootinfo/: CMakeLists.txt  root_info_generate.cpp
(+770 files in other folders)
